<resources>
    <string name="app_name">The Shopping Mile App</string>
    <string name="action_settings">Configuracion</string>
    <string name="title_activity_maps">Shopping Mile Map</string>

    <!--  strings preferencias de usuario  -->
    <string name="pref_titulo_scren_nom_user">Nombre de Usuario</string>
    <string name="emailUser">Email</string>
    <string name="passwordUser">Password</string>
    <string name="pref_titulo_scren_password_user">Contraseña de Usuario</string>

    <!-- Shared Preferences -->
    <string name="name_key">name</string>
    <string name="nameTitle">Nombre del usuario</string>
    <string name="nameSummary">Nombre del usuario</string>
    <string name="titleDialog">Introduce el valor</string>
    <string name="password_key">password</string>
    <string name="passwordTitle">Contraseña</string>
    <string name="passwordSummary">Contraseña</string>
    <string name="email_key">email</string>
    <string name="emailTitle">Correo del usuario</string>
    <string name="emailSummary">Correo electronico del usuario</string>
    <string name="board_key">board</string>
    <string name="boardTitle">Preferencias</string>
    <string name="boardSummary">Preferencias sobre los establecimientos</string>

    <!-- Main Activity -->
    <string name="radius_meters">Distancia</string>
    <string name="distance_0">100 m</string>
    <string name="distance_1">500 m</string>
    <string name="distance_2">1 Km</string>
    <string name="distance_3">1,5 Km</string>
    <string name="distance_4">2 Km</string>
    <string name="distance_5">5 Km</string>
    <string name="establish_type">Establecimientos</string>
    <string name="establish_all">Todos</string>
    <string name="establish_meal">Gastronomia</string>
    <string name="meal_type">Tipo de comida</string>
    <string name="meal_0">Todos</string>
    <string name="meal_1">Italiana</string>
    <string name="meal_2">Turca</string>
    <string name="meal_3">Española</string>
    <string name="meal_4">China</string>
    <string name="meal_5">Japonesa</string>
    <string name="meal_6">Tapeo</string>
    <string name="meal_7">Bocatas</string>
    <string name="meal_8">Mexicana</string>

    <string name="establish_electronic">Electronica</string>
    <string name="establish_clothing">Ropa</string>
    <string name="establish_mall">Centro Comercial</string>
    <string name="establish_museum">Museo</string>
    <string name="establish_beauty_Salon">Salon de Belleza</string>
    <string name="establish_sports">Tienda de deporte</string>
    <string name="establish_book">Libreria</string>
    <string name="establish_bowling">Bolera</string>
    <string name="establish_bus">Autocar</string>
    <string name="establish_church">Iglesia</string>
    <string name="establish_cityHall">Ayuntamiento</string>
    <string name="establish_florist">Floristeria</string>
    <string name="establish_hotel">Hotel</string>
    <string name="establish_jewery">Joyeria</string>
    <string name="establish_tobaco">Estanco de Tabaco</string>
    <string name="establish_liquor">Licoreria</string>
    <string name="establish_cinema">Cine</string>
    <string name="establish_nightClub">Discoteca</string>
    <string name="establish_theater">Teatro</string>
    <string name="establish_park">Parque</string>
    <string name="establish_parking">Parking</string>
    <string name="establish_pharmacy">Farmacia</string>
    <string name="establish_Shoes">Zapateria</string>
    <string name="establish_perfumery">Perfumeria</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="establishTitle">Establecimientos</string>
    <string name="salesTitle">Ofertas</string>
    <string name="mapTitle">The Shopping Mile Map</string>
    <string name="settingsTitle">Configuracion</string>

    <!-- title for error alerts. -->
    <string name="error_alert_title">Uh-Oh!</string>
    <!-- message to show for error alerts when location bias or restriction is malformed. -->
    <string name="error_alert_message_invalid_bounds">Unable to parse Location Bias or Location Restriction. Expected format: "33, 128"</string>
    <!-- message to show for error alerts when a photo size field is malformed. -->
    <string name="error_alert_message_invalid_photo_size">Unable to parse Photo size. Expected format is integers</string>
    <string name="error_api_key">No API key defined in gradle.properties</string>
    <!-- Text for raw results checkbox. When checked raw return values will be displayed. -->
    <string name="display_raw_results">Display raw results?</string>


    <!-- MAIN ACTIVITY -->
    <!-- Button for launching autocomplete test activity. -->
    <string name="autocomplete_button">Autocomplete</string>
    <!-- Button for launching place and photo test activity. -->
    <string name="place_and_photo_button">Place and Photo</string>
    <!-- Button for launching current place test activity. -->
    <string name="current_place_button">Current Place</string>


    <!-- AUTOCOMPLETE -->
    <!-- Hint for the autocomplete widget's initial query and autocomplete prediction's query field. -->
    <string name="autocomplete_query_hint">(Initial) Query</string>
    <!-- Hint for the autocomplete fragment's hint. -->
    <string name="autocomplete_hint_hint">(Fragment-only) Hint</string>
    <!-- Hint for the autocomplete prediction's and widget's country field. -->
    <string name="autocomplete_country_hint">Country</string>
    <!-- Hint Text for the autocomplete prediction's and widget's type filter field. -->
    <string name="autocomplete_type_filter">Type Filter</string>
    <!-- Label for the autocomplete prediction's and widget's location bias related fields. -->
    <string name="autocomplete_location_bias_label">Location Bias (format: -33.2, 128.2)</string>
    <!-- Label for the autocomplete prediction's and widget's location restriction related fields. -->
    <string name="autocomplete_location_restriction_label">Location Restriction (format: -33.2, 128.2)</string>
    <!-- Hint for the autocomplete prediction's and widget's location southwest field. -->
    <string name="autocomplete_location_south_west_hint">South West (lat, lng)</string>
    <!-- Hint for the autocomplete prediction's and widget's location northeast field. -->
    <string name="autocomplete_location_north_east_hint">North East (lat, lng)</string>
    <!-- Text for enabling autocomplete prediction's and widget's type filter field. -->
    <string name="autocomplete_use_type_filter">Use TypeFilter?</string>
    <!-- Text for enabling autocomplete prediction's use of session tokens. -->
    <string name="autocomplete_use_session_token">(Predictions-only) Use session token?</string>
    <!-- Text for autocomplete activity mode (overlay or fullscreen) checkbox. -->
    <string name="autocomplete_activity_overlay_mode">(Activity-only) Overlay mode?</string>
    <!-- Text for the autocomplete fragment update button. -->
    <string name="autocomplete_fragment_update_button">Update Fragment</string>
    <!-- Text for starting the autocomplete activity button. -->
    <string name="autocomplete_activity_button">Open Activity</string>
    <!-- Text for the fetch autocomplete predictions submit button. -->
    <string name="fetch_autocomplete_predictions_button">Fetch Predictions</string>


    <!-- FETCH PLACE AND PHOTO -->
    <!-- Hint for the place ID field. -->
    <string name="place_id_field_hint">Enter place ID</string>
    <!-- Text for the fetch place and photo button. -->
    <string name="fetch_photo_checkbox">Also fetch photo?</string>
    <!-- Hint for the fetch photo max width field. -->
    <string name="photo_max_width_hint">Photo Max Width</string>
    <!-- Text for the fetch photo max height field. -->
    <string name="photo_max_height_hint">Photo Max Height</string>
    <!-- Text for the fetch place and photo button. -->
    <string name="use_custom_photo_reference">Use custom Photo Reference?</string>
    <!-- Text for the fetch place and photo button. -->
    <string name="custom_photo_reference_hint">Custom Photo Reference</string>
    <!-- Text for checkbox to set custom list of Place Fields. -->
    <string name="use_custom_fields">Manually set Place Fields?</string>
    <!-- Text for the fetch place and photo button. -->
    <string name="fetch_place_and_photo_button">Fetch Place and Photo</string>


    <!-- FIND CURRENT PLACE -->
    <!-- Text for the find current place submit button. -->
    <string name="find_current_place_button">Find Current Place</string>

</resources>
