<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/action_settings">

        <EditTextPreference
            android:id="@+id/username_config"
            android:defaultValue="@string/username_key"
            android:dialogTitle="@string/titleDialog"
            android:key="@string/username_key"
            android:summary="@string/usernameSummary"
            android:title="@string/usernameTitle" />

        <EditTextPreference
            android:id="@+id/email_config"
            android:defaultValue="@string/email_key"
            android:dialogTitle="@string/titleDialog"
            android:key="@string/email_key"
            android:summary="@string/emailSummary"
            android:title="@string/emailTitle" />

        <EditTextPreference
            android:id="@+id/password_config"
            android:defaultValue="@string/password_key"
            android:dialogTitle="@string/titleDialog"
            android:key="@string/password_key"
            android:summary="@string/passwordSummary"
            android:title="@string/passwordTitle" />

        <ListPreference
            android:id="@+id/board_config"
            android:defaultValue="Todos"
            android:dialogTitle="@string/titleDialog"
            android:entries="@array/board1"
            android:entryValues="@array/board2"
            android:key="@string/board_key"
            android:summary="@string/boardSummary"
            android:title="@string/boardTitle" />
    </PreferenceCategory>
</PreferenceScreen>